nah not important
Guess my commit quite nonsense hahaha. I forgot what I update last time

--- a/Data Binding (Basic)/UserInfoDataBinding/app/src/main/res/values/strings.xml
+++ b/Data Binding (Basic)/UserInfoDataBinding/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     //Button
     //Main Activity
-    <string name="next">NEXT</string>
-    <string name="previous">PREVIOUS</string>
+    <string name="btnNext">NEXT</string>
+    <string name="btnPrevious">PREVIOUS</string>
 
     //Tag
     //Main Activity
